# youtube_summarizer

./: .codiumai.toml  .deepsource.toml  .gitignore  .gitlab-ci.yml  .jscpd.json  .mega-linter.yml  .mypy.ini  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.md  README.md  ai.py  cli.py  devbox.json  pipeline.py  pyproject.toml  ruff.toml  tox.ini  transcript.py
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
.github/workflows/: ci.yaml  run_tests.yaml
.harness/: Build_atayarani_youtube_summarizer_1705985783859-pr-trigger-input-set-1705985784782.yaml  Build_atayarani_youtube_summarizer_1705985783859-push-trigger-input-set-1705985785850.yaml
.harness/pipelines/: youtube_summarizer-1705985763138.yaml
.trunk/: trunk.yaml
scripts/: testspace
src/: ai.py  cli.py  exceptions.py  metadata.py  transcript.py  youtube_data.py
src/youtube_cheatsheet/: ai.py  cli.py  exceptions.py  metadata.py  output.py  transcript.py  youtube_data.py
src/youtube_cheatsheet/ai_providers/: assemblyai.py  openai.py
src/youtube_cheatsheet/templates/: output.md.j2
src/youtube_cheatsheet/video_providers/youtube/: audio.py  data.py
templates/: output.md.j2
tests/: .ruff.toml  conftest.py  test_ai.py  test_cli.py  test_exceptions.py  test_metadata.py  test_output.py  test_transcript.py  test_youtube_data.py
tests/ai/: conftest.py  test_init.py  test_split_transcript.py  test_summary.py
tests/ai_providers/: test_assemblyai.py  test_openai.py
tests/cli/: test_ai_content.py  test_get_output.py  test_get_transcript.py  test_get_youtube_data_from_url.py  test_validate_output_path.py
tests/transcript/: test_metadata.py  test_transcript.py
tests/video_providers/youtube/: test_data.py
