[project]
requires-python = ">=3.10"
name = "youtube-cheatsheet"
version = "0.3.0"
description = "A commandline application to summarize youtube videos"
authors = [{ name = "atayarani" }]
readme = "README.md"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "License :: OSI Approved :: Apache Software License",
]
license = { file = "LICENSE.md" }
urls = { Homepage = "https://github.com/atayarani/youtube-summarizer" }
keywords = ["youtube", "summarizer", "summarization", "youtube-cheatsheet"]
dependencies = [
  "langchain~=0.1.0",
  "youtube-transcript-api~=0.6.2",
  "langchain-openai~=0.0.2",
  "pytube~=15.0.0",
  "python-slugify~=8.0.1",
  "attrs~=23.2.0",
  "yt-dlp~=2023.12.30",
  "pydub~=0.25.1",
  "assemblyai~=0.20.2",
  "typer~=0.9.0",
  "jinja2~=3.1.3",
  "rich~=13.7.0",
  "returns[compatible-mypy]>=0.21.0",
  "virtualenv-rye-discovery @ git+https://github.com/bluss/virtualenv-rye-discovery@0.3.0",
  "tox-rye @ git+https://github.com/bluss/tox-rye@0.3.0",
  "toolz>=0.12.1",
]

[tool.rye]
managed = true
dev-dependencies = [
  # development
  "ruff~=0.1.14",
  "pre-commit~=3.6.0",
  "types-python-slugify~=8.0.2.20240127",
  "radon~=6.0.1",
  # testing
  "pytest~=7.4.4",
  "pytest-cov~=4.1.0",
  "pytest-mock~=3.12.0",
  "hypothesis[codemods]~=6.97.4",
  "pytest-spec~=3.2.0",
  "tox>=4.12.1",
  "ruff-lsp>=0.0.52",
  "pytest-ruff>=0.2.1",
]

[tool.rye.scripts]
summarize = { call = "youtube_cheatsheet.cli:app" }
testsuite = { cmd = [
  "python",
  "-mpytest",
  "--junit-xml=./results/pytest.xml",
  "--cov=./",
  "--cov-report",
  "xml",
  "-v",
] }

[tool.pytest.ini_options]
addopts = ["--spec", "--cov=src", "--import-mode=importlib"]
testpaths = ["tests"]

[tool.coverage.report]
show_missing = true
skip_covered = true
skip_empty = true
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:"]

[tool.ruff.lint]
extend-select = [
  "ARG",  # flake8-unused-arguments
  "B",    # flake8-bugbear
  "BLE",  # flake8-blind-except
  "C4",   # flake8-comprehensions
  "C901", # mccabe
  "FLY",  # flynt
  "FURB", # refurb
  "I",    # isort
  "N",    # pep8-naming
  "PERF", # Perflint
  "PT",   # flake8-pytest-style
  "PTH",  # flake8-use-pathlib
  "RET",  # flake8-return
  "RUF",  # Ruff-specific rules
  "S",    # flake8-bandit
  "SIM",  # flake8-simplify
  "TRY",  # tryceratops
  "UP",   # pyupgrade
]
ignore = [
  "D100",   # Missing docstring in public module
  "D104",   # Missing docstring in public package
  "D203",   # 1 blank line required before class docstring
  "D212",   # Multi-line docstring summary should start at the first line
  "S101",   # Use of assert detected
  "TRY003", # Avoid specifying long messages outside the exception class
]
mccabe = { max-complexity = 5 }
pydocstyle = { convention = "google" }

[tool.ruff.format]
docstring-code-format = true


# mypy settings as recommended by `returns` library
[tool.mypy]
python_version = "3.10"
allow_redefinition = false
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = false
local_partial_types = true
no_implicit_optional = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
plugins = ["returns.contrib.mypy.returns_plugin"]
exclude = ["build"]

[tool.hatch.build.targets.sdist]
include = ["src"]
